# Rust_Axum_Backend_Auth_Email_PGSQL

./: .env  Cargo.toml  readme.md
migrations/: 20241028165847_user.up.sql
src/: config.rs  dtos.rs  error.rs  models.rs
